@@ -1,3 +1,8 @@
+2008-10-18  Marcus Meissner  <marcus@jet.franken.de>
+
+	* merged 1.3M Creative CardCam patch from Sourceforge.
+	  https://sourceforge.net/tracker/index.php?func=detail&aid=947064&group_id=8874&atid=308874
+
 2003-01-06  Lee Benfield <lee@benf.org>
 
 	* Version 0.01
